Finalização das tarefas propostas