@@ -14,29 +14,58 @@ public class Reader {
 	private List<List<String>> tableData;
 	private String turma;
 
-	public Reader(String ficheiroLocal, String turma) {
-		this.turma = turma;
+//	public Reader(String ficheiroLocal, String turma) {
+//		this.turma = turma;
+//		ficheiroCSV = new File(ficheiroLocal);
+//		tableData = dividirPorColuna(ficheiroCSV, turma);
+//	}
+
+	public Reader(String ficheiroLocal) {
 		ficheiroCSV = new File(ficheiroLocal);
-		tableData = dividirPorColuna(ficheiroCSV, turma);
+		tableData = dividirPorColuna(ficheiroCSV);
 	}
 
-	private List<List<String>> dividirPorColuna(File csv, String turma) {
+//	private List<List<String>> dividirPorColuna(File csv, String turma) {
+//		List<List<String>> data = new ArrayList<>();
+//		Scanner sc;
+//		try {
+//			sc = new Scanner(csv);
+//			columnTitles = readColumnTitles(sc);
+//			while (sc.hasNextLine()) {
+//				List<String> linha = Arrays.asList(sc.nextLine().split(";"));
+//				if (existsTurma(linha.get(3),turma)) {
+//					data.add(linha);
+//				}
+//			}
+//		} catch (FileNotFoundException e) {
+//			e.printStackTrace();
+//		}
+//
+//		return data;
+//	}
+
+	private List<List<String>> dividirPorColuna(File csv) {
 		List<List<String>> data = new ArrayList<>();
 		Scanner sc;
 		try {
 			sc = new Scanner(csv);
 			columnTitles = readColumnTitles(sc);
 			while (sc.hasNextLine()) {
-				List<String> linha = Arrays.asList(sc.nextLine().split(";"));
-				if (existsTurma(linha.get(3),turma)) {
-					data.add(linha);
-				}
+				List<String> linha = new ArrayList<>(List.of(sc.nextLine().split(";")));
+				data.add(formatDataFromFile(linha));
 			}
 		} catch (FileNotFoundException e) {
 			e.printStackTrace();
 		}
 
 		return data;
+	}
+
+	private List<String> formatDataFromFile(List<String> s) {
+		while(s.size() < 11) {
+			s.add("N/A");
+		}
+		return s;
 	}
 
 
@@ -48,14 +77,14 @@ public class Reader {
 		return titles;
 	}
 
-	private boolean existsTurma(String linha, String turma) {
-		String[] turmas = linha.split(",");
-		for (int i = 0; i != turmas.length; i++) {
-			if (turmas[i].trim().equals(turma))
-				return true;
-		}
-		return false;
-	}
+//	private boolean existsTurma(String linha, String turma) {
+//		String[] turmas = linha.split(",");
+//		for (int i = 0; i != turmas.length; i++) {
+//			if (turmas[i].trim().equals(turma))
+//				return true;
+//		}
+//		return false;
+//	}
 
 	public List<String> getColumnTitles() {
 		return columnTitles;
@@ -91,11 +120,15 @@ public class Reader {
 //			System.out.println(row);
 //
 //		}
-		String s = ";Reporte Financeiro;M8642TP01;FCC2;;35;Qua;11:00:00;12:30:00;07/12/2022;Sala de Aulas normal";
+		String s = "Reporte Financeiro;M8642TP01;FCC2;12312;35;Qua;11:00:00;12:30:00;07/12/2022;Sala de Aulas normal;";
 		String[] sA = s.split(";");
 		System.out.print(s.split(";").length + "\n");
 		System.out.println(Arrays.asList(sA));
-	//	System.out.println(s.split(";")[0]);
+		System.out.println(s.split(";")[0]);
+
+//		String s = "";
+//		String s2 = " ";
+//		System.out.println(s.isEmpty() + "\n" + s.isBlank() + "\n" + s.length() + "\n" + s2.isEmpty() + "\n" + s2.isBlank() + "\n" + s2.length());
 	}
 
 }
